<resources>
    <string name="app_name">StocksApplication</string>
    <string name="stock_quantity">Stock Quantity: </string>
    <string name="usdt">USDT: </string>
    <string name="current_purchase_price">Current Price</string>
    <string name="quantity">Quantity :</string>
    <string name="purchasing_price">Purchasing Price :</string>
    <string name="price">Price</string>
    <string name="total_amount">Total Amount :</string>
    <string name="add_currency">Add Currency</string>
    <string name="total_wallet">Total Wallet :</string>
    <string name="currency_name">Currency Name</string>
    <string name="add">Add</string>
    <string name="buying_new_stock">Buying New Stock</string>
    <string name="save">Save</string>
    <string name="your_currency">Your Currency</string>
    <string name="no_currency_added">No Currency Added</string>
    <string name="no_stock">There is no stocks</string>
    <string name="price_difference">Price Difference =</string>
    <string name="average_price">Average Price :</string>
    <string name="common_yes">yes</string>
    <string name="common_no">no</string>
    <string name="confirm_message">Are you sure want delete?</string>
</resources>