<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingVertical="10dp"
    tools:context=".utils.costum_ui.ComponentStockListItem">

    <TextView
        style="@style/TextStyle.Bold15.TextColor3"
        android:id="@+id/stockQuantityTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/quantity" />

    <TextView
        style="@style/TextStyle.Bold15.TextColor3"
        android:id="@+id/purchasingPriceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/purchasing_price" />

    <TextView
        style="@style/TextStyle.Bold15.TextColor3"
        android:id="@+id/totalAmountTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/total_amount" />

    <ImageView
        android:id="@+id/delete"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/ic_trash"
        android:background="@drawable/bg_pressed_background_transpernt"
        android:visibility="gone"
        tools:visibility="visible" />

</LinearLayout>