<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/textView"
        style="@style/TextStyle.Bold15.TextColor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/your_currency"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalPrice"
        style="@style/TextStyle.Regular15.TextColor3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/total_wallet"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/no_data_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_currency_added"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_stock_button"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/background_1"
        android:foreground="@drawable/ic_add"
        app:backgroundTint="@color/background_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/add_currency" />

    <View
        style="@style/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>