<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp"
    tools:context=".utils.costum_ui.ComponentAddStock"
    android:baselineAligned="false">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stockQuantityTextField"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/quantity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/stockQuantity"
            style="@style/TextStyle.Regular14.TextColor1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/purchasingPriceTextField"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/purchasingPrice"
            style="@style/TextStyle.Regular14.TextColor1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:hint="@string/price"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/totalAmountTextField"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:enabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/total_amount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/totalAmount"
            style="@style/TextStyle.Regular14.TextColor1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>